# open-rkllm

./: .gitignore  README.md  report.md
analyze/: c-filt.txt  file.txt  header.txt  nm.txt  objdump-t.txt  objdump.txt  readable.txt  readelf_sections.txt  readelf_symbols.txt
llama.cpp/: libggml-cpu.c  libggml-cpu.h  llama-cli
re-compile/rkllm/: CMakeLists.txt  Makefile  build.bat  simplified_rkllm.cpp
re-compile/rkllm/examples/: rkllm_test.cpp
re-compile/rkllm/include/: rkllm_internal.h
re-compile/rkllm/src/: rkllm_core.cpp
rkllm-output/: librkllmrt.h  rkllm.h
rknn-output/: librknnrt.h
